keyname return not enter

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -147,7 +147,7 @@ animations {
     animation = workspaces, 1, 1.94, almostLinear, fade
     animation = workspacesIn, 1, 1.21, almostLinear, fade
     animation = workspacesOut, 1, 1.94, almostLinear, fade
-    animation = zoomFactor, 1, 7, quick
+    # animation = zoomFactor, 1, 7, quick
 }
 
 # Ref https://wiki.hypr.land/Configuring/Workspace-Rules/
@@ -220,7 +220,7 @@ device {
 $mainMod = ALT
 
 # Example binds, see https://wiki.hypr.land/Configuring/Binds/ for more
-bind = $mainMod, enter, exec, $terminal
+bind = $mainMod, return, exec, $terminal
 bind = $mainMod, C, killactive,
 bind = $mainMod, M, exit,
 bind = $mainMod, E, exec, $fileManager
